adduser (3.101.0) UNRELEASED; urgency=low

  [ Marc Haber ]
  * NOT RELEASED YET
  * Add testsuite test9.pl to catch the bug from #407231

  [ Stephen Gran ]
  * addsysgroup action was calling existing_group_ok() before defining
    $new_group, and exiting with wrong return code if user existed but was not
    a system group.  (closes: #407231)
  * Update test9.pl to not fail if group being added exists, but has a
    different gid than the one we are looking for.

 -- Stephen Gran <sgran@debian.org>  Wed, 17 Jan 2007 13:00:03 +0000

adduser (3.101) unstable; urgency=low

  [ Marc Haber ]
  * Update French (fr) program and man page translation.
    Thanks to Nicolas François. Closes: #402247
    The man page translation is from off-BTS
  * Update Russian (ru) man page translation.
    Thanks to Yuri Kozlov. Closes: #403785
  * Update Italian (it) program and man page translation.
    Thanks to Luca Monducci. Closes: #404262

  [ Stephen Gran ]
  * Update documentation about system uid's < 100 (closes: #402288)

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sat, 23 Dec 2006 12:50:15 +0100

adduser (3.100) unstable; urgency=low

  [ Marc Haber ]
  * Update Italian (it) program translation.
    Thanks to Luca Monducci. Closes: #396948
  * Update French (fr) program translation.
    Thanks to Nicolas François. Closes: #396737
  * Update German (de) program translation.
    Thanks to Tobias Toedter. Closes: #397131
  * Update Basque (eu) program translation.
    Thanks to Piarres Beobide. (mh) Closes: #399552
  * Updated Catalan (ca) program translation.
    Thanks to Jordi Mallach and Robert Millan. (mh) Closes: #379476

  [ Stephen Gran ]
  * Tentative fix for Undefined subroutine &main::NOEXPR called at
    /usr/sbin/adduser line 509.
    Thanks to Thorsten Gunkel. Closes: #212872

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun, 26 Nov 2006 22:12:28 +0100

adduser (3.99) unstable; urgency=low

  * escape @ in new regexp, now really fixing #389160.