@@ -6,7 +6,7 @@ use strict;
 use lib_test;
 
 my $groupname = "nogroup";
-my $username = find_unused_username();
+my $username = find_unused_name();
 my $want_uid = find_unused_uid("system");
 
 my $cmd = "adduser --system --uid $want_uid $username";
