@@ -5,7 +5,7 @@ use strict;
 
 use lib_test;
 
-my $username = find_unused_username();
+my $username = find_unused_name();
 
 my $cmd = "adduser --system $username";
 
