@@ -1,8 +1,10 @@
 adduser (3.101.0) UNRELEASED; urgency=low
 
-  [ Marc Haber ]
   * NOT RELEASED YET
+
+  [ Marc Haber ]
   * Add testsuite test9.pl to catch the bug from #407231
+  * Some testsuite tweaks
 
   [ Stephen Gran ]
   * addsysgroup action was calling existing_group_ok() before defining
@@ -11,7 +13,7 @@ adduser (3.101.0) UNRELEASED; urgency=low
   * Update test9.pl to not fail if group being added exists, but has a
     different gid than the one we are looking for.
 
- -- Stephen Gran <sgran@debian.org>  Wed, 17 Jan 2007 13:00:03 +0000
+ -- Marc Haber <mh+debian-packages@zugschlus.de>  Wed, 17 Jan 2007 15:22:56 +0100
 
 adduser (3.101) unstable; urgency=low
 
